--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -4,9 +4,21 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/10/2022
+Project File Date:  05/09/2022
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Rebuild target 'Target 1'
+assembling startup_TM4C123.s...
+compiling main.c...
+compiling Switch.c...
+compiling Tiva.c...
+compiling Microwave.c...
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling LED.c...
+compiling Interrupt.c...
+linking...
+Program Size: Code=5092 RO-data=652 RW-data=24 ZI-data=608  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
