--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,10 +3,28 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/10/2022
+C:\Users\ranah\OneDrive\Desktop\sr\Project\Project\microwave.uvproj
+Project File Date:  05/13/2022
 
 <h2>Output:</h2>
+Build target 'Target 1'
+assembling startup_TM4C123.s...
+compiling main.c...
+compiling Switch.c...
+compiling Tiva.c...
+compiling Microwave.c...
+Microwave.c(193): warning:  #550-D: variable "time" was set but never used
+        int time;
+Microwave.c: 1 warning, 0 errors
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling LED.c...
+compiling Interrupt.c...
+linking...
+Program Size: Code=5124 RO-data=652 RW-data=24 ZI-data=608  
+".\microwave.axf" - 0 Error(s), 1 Warning(s).
 </pre>
 </body>
 </html>
