--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -4,7 +4,7 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
-Project File Date:  05/09/2022
+Project File Date:  05/10/2022
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -20,5 +20,12 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=5092 RO-data=652 RW-data=24 ZI-data=608  
+Program Size: Code=4904 RO-data=652 RW-data=24 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
+
+Finished: 1 information, 0 warning and 1 error messages.
+".\microwave.axf" - 1 Error(s), 0 Warning(s).
+Target not created
