--- a/microwave.htm
+++ b/microwave.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\microwave.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\microwave.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Fri May 13 14:20:14 2022
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Fri May 13 14:25:43 2022
 <BR><P>
 <H3>Maximum Stack Usage =        100 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -133,7 +133,7 @@ Mutually Recursive functions
  <LI><a href="#[76]">PWM1_2_Handler</a>&nbsp;&nbsp;&nbsp;&rArr;&nbsp;&nbsp;&nbsp;<a href="#[76]">PWM1_2_Handler</a><BR>
  <LI><a href="#[77]">PWM1_3_Handler</a>&nbsp;&nbsp;&nbsp;&rArr;&nbsp;&nbsp;&nbsp;<a href="#[77]">PWM1_3_Handler</a><BR>
  <LI><a href="#[78]">PWM1_FAULT_Handler</a>&nbsp;&nbsp;&nbsp;&rArr;&nbsp;&nbsp;&nbsp;<a href="#[78]">PWM1_FAULT_Handler</a><BR>
- <LI><a href="#[90]">Cook_Time</a>&nbsp;&nbsp;&nbsp;&rArr;&nbsp;&nbsp;&nbsp;<a href="#[90]">Cook_Time</a><BR>
+ <LI><a href="#[92]">Cook_Time</a>&nbsp;&nbsp;&nbsp;&rArr;&nbsp;&nbsp;&nbsp;<a href="#[92]">Cook_Time</a><BR>
 </UL>
 <P>
 <H3>
@@ -1203,17 +1203,17 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[82]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__user_setup_stackheap
 </UL>
 
-<P><STRONG><a name="[86]"></a>main</STRONG> (Thumb, 80 bytes, Stack size 0 bytes, main.o(.text))
+<P><STRONG><a name="[86]"></a>main</STRONG> (Thumb, 106 bytes, Stack size 0 bytes, main.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 100<LI>Call Chain = main &rArr; cook_Beef_or_Chicken &rArr; Time_Display &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
-<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
-<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
-<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
-<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyScan
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
+<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyScan
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 </UL>
 <BR>[Called By]<UL><LI><a href="#[85]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
@@ -1265,58 +1265,58 @@ Global Symbols
 <P><STRONG><a name="[9d]"></a>Time_Display</STRONG> (Thumb, 170 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = Time_Display &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
-<BR>[Calls]<UL><LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
-<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<BR>[Calls]<UL><LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
-<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<BR>[Called By]<UL><LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
+<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 </UL>
 
-<P><STRONG><a name="[90]"></a>Cook_Time</STRONG> (Thumb, 158 bytes, Stack size 16 bytes, microwave.o(.text))
+<P><STRONG><a name="[92]"></a>Cook_Time</STRONG> (Thumb, 158 bytes, Stack size 16 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 60 + In Cycle
 <LI>Call Chain = Cook_Time &rArr;  Cook_Time (Cycle)
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
-<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
-<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyScan
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyScan
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 </UL>
-<BR>[Called By]<UL><LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<BR>[Called By]<UL><LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[9f]"></a>Char_to_int</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, microwave.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR><BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
 <P><STRONG><a name="[a4]"></a>Int_to_char0</STRONG> (Thumb, 44 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = Int_to_char0
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
 <P><STRONG><a name="[a5]"></a>Int_to_char1</STRONG> (Thumb, 34 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = Int_to_char1
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
-<P><STRONG><a name="[8e]"></a>cook_Popcorn</STRONG> (Thumb, 34 bytes, Stack size 8 bytes, microwave.o(.text))
+<P><STRONG><a name="[90]"></a>cook_Popcorn</STRONG> (Thumb, 34 bytes, Stack size 8 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = cook_Popcorn &rArr; Time_Display &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
-<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
 </UL>
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[8f]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 308 bytes, Stack size 56 bytes, microwave.o(.text))
+<P><STRONG><a name="[91]"></a>cook_Beef_or_Chicken</STRONG> (Thumb, 308 bytes, Stack size 56 bytes, microwave.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 100<LI>Call Chain = cook_Beef_or_Chicken &rArr; Time_Display &rArr; LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dmul
@@ -1328,10 +1328,10 @@ Global Symbols
 <LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Int_to_char0
 <LI><a href="#[9f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Char_to_int
 <LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
-<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
-<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyScan
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyScan
 </UL>
 <BR>[Called By]<UL><LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
@@ -1350,19 +1350,19 @@ Global Symbols
 </UL>
 <BR>[Called By]<UL><LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
 <LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
 </UL>
 
-<P><STRONG><a name="[93]"></a>LCD_Clear_Display</STRONG> (Thumb, 16 bytes, Stack size 8 bytes, lcd.o(.text))
+<P><STRONG><a name="[8f]"></a>LCD_Clear_Display</STRONG> (Thumb, 16 bytes, Stack size 8 bytes, lcd.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 20<LI>Call Chain = LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 </UL>
 <BR>[Called By]<UL><LI><a href="#[97]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Init
 <LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
-<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
+<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1370,7 +1370,7 @@ Global Symbols
 <BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = LCD_Init &rArr; LCD_Clear_Display &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
+<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Clear_Display
 </UL>
 <BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
@@ -1381,20 +1381,20 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
 <LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
 </UL>
 
-<P><STRONG><a name="[91]"></a>LCD_Show</STRONG> (Thumb, 30 bytes, Stack size 16 bytes, lcd.o(.text))
+<P><STRONG><a name="[8d]"></a>LCD_Show</STRONG> (Thumb, 30 bytes, Stack size 16 bytes, lcd.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = LCD_Show &rArr; LCD_Write &rArr; LCD_CMD &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strlen
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
 </UL>
 <BR>[Called By]<UL><LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
-<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
+<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1402,9 +1402,9 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;microwave_Init
 </UL>
 
-<P><STRONG><a name="[8d]"></a>KeyScan</STRONG> (Thumb, 66 bytes, Stack size 0 bytes, keypad.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<P><STRONG><a name="[8e]"></a>KeyScan</STRONG> (Thumb, 66 bytes, Stack size 0 bytes, keypad.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1428,18 +1428,18 @@ Global Symbols
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_CMD
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Write
-<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_ms
 </UL>
 
-<P><STRONG><a name="[92]"></a>Systick_Wait_ms</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, timer.o(.text))
+<P><STRONG><a name="[93]"></a>Systick_Wait_ms</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, timer.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = Systick_Wait_ms &rArr; Systick_Wait_1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Systick_Wait_1ms
 </UL>
 <BR>[Called By]<UL><LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Time_Display
-<LI><a href="#[8e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
-<LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
-<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
+<LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Popcorn
+<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Cook_Time
 <LI><a href="#[86]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1468,7 +1468,7 @@ Global Symbols
 <P><STRONG><a name="[a9]"></a>strlen</STRONG> (Thumb, 62 bytes, Stack size 8 bytes, strlen.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = strlen
 </UL>
-<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
+<BR>[Called By]<UL><LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD_Show
 </UL>
 
 <P><STRONG><a name="[e5]"></a>__use_two_region_memory</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
@@ -1522,7 +1522,7 @@ Global Symbols
 <P><STRONG><a name="[a2]"></a>__aeabi_d2iz</STRONG> (Thumb, 0 bytes, Stack size 32 bytes, dfix.o(x$fpl$dfix))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = __aeabi_d2iz
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
 <P><STRONG><a name="[b0]"></a>_dfix</STRONG> (Thumb, 94 bytes, Stack size 32 bytes, dfix.o(x$fpl$dfix), UNUSED)
@@ -1530,7 +1530,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[a0]"></a>__aeabi_i2d</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, dflt_clz.o(x$fpl$dflt))
-<BR><BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR><BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
 <P><STRONG><a name="[ee]"></a>_dflt</STRONG> (Thumb, 46 bytes, Stack size 0 bytes, dflt_clz.o(x$fpl$dflt), UNUSED)
@@ -1538,7 +1538,7 @@ Global Symbols
 <P><STRONG><a name="[a1]"></a>__aeabi_dmul</STRONG> (Thumb, 0 bytes, Stack size 32 bytes, dmul.o(x$fpl$dmul))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = __aeabi_dmul
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
 <P><STRONG><a name="[b1]"></a>_dmul</STRONG> (Thumb, 332 bytes, Stack size 32 bytes, dmul.o(x$fpl$dmul), UNUSED)
@@ -1561,7 +1561,7 @@ Global Symbols
 <P><STRONG><a name="[a3]"></a>__aeabi_drsub</STRONG> (Thumb, 0 bytes, Stack size 8 bytes, daddsub_clz.o(x$fpl$drsb))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = __aeabi_drsub
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
+<BR>[Called By]<UL><LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;cook_Beef_or_Chicken
 </UL>
 
 <P><STRONG><a name="[b2]"></a>_drsb</STRONG> (Thumb, 22 bytes, Stack size 8 bytes, daddsub_clz.o(x$fpl$drsb), UNUSED)
