--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -20,14 +20,7 @@ compiling Timer.c...
 compiling LED.c...
 compiling Interrupt.c...
 linking...
-Program Size: Code=4940 RO-data=652 RW-data=24 ZI-data=608  
+Program Size: Code=4984 RO-data=652 RW-data=24 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-</pre>
-</body>
-</html>
-
+ 2 Error(s), 0 Warning(s).
+Target not created
