--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,14 +3,11 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-D:\#ASU\Repo\Project\microwave.uvproj
+D:\FML (At Death's Door)\College\Introduction to Embedded Systems\Project\microwave.uvproj
 Project File Date:  05/13/2022
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
-
+Rebuild target 'Target 1'
 assembling startup_TM4C123.s...
 compiling main.c...
 compiling Switch.c...
@@ -25,11 +22,6 @@ compiling Interrupt.c...
 linking...
 Program Size: Code=4956 RO-data=652 RW-data=24 ZI-data=608  
 ".\microwave.axf" - 0 Error(s), 0 Warning(s).
-Load "D:\\#ASU\\Repo\\Project\\microwave.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
 </pre>
 </body>
 </html>
