--- a/microwave.build_log.htm
+++ b/microwave.build_log.htm
@@ -3,7 +3,45 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-E:\project\Project\microwave.uvproj
-Project File Date:  05/13/2022
+D:\#ASU\Repo\Project\microwave.uvproj
+Project File Date:  05/14/2022
 
 <h2>Output:</h2>
+Rebuild target 'Target 1'
+assembling startup_TM4C123.s...
+compiling main.c...
+compiling Switch.c...
+compiling Tiva.c...
+compiling Microwave.c...
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling Interrupt.c...
+compiling LED.c...
+linking...
+Program Size: Code=4260 RO-data=652 RW-data=24 ZI-data=512  
+".\microwave.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
+min
+Microwave.c(169): warning:  #223-D: function "LCD_String" declared implicitly
+                LCD_String("Beef weight?");                                                                                             // show Beef weight on lcd
+Microwave.c(175): warning:  #223-D: function "LCD_String" declared implicitly
+                LCD_String("Chicken  weight?");                                                                                         // show Chicken weight on lcd
+Microwave.c(188): warning:  #223-D: function "LCD_String" declared implicitly
+                        LCD_String("Err");                                                                                                                              //show Err in lcd if the condition is true
+Microwave.c: 5 warnings, 0 errors
+compiling LCD.c...
+compiling Keypad.c...
+compiling Buzzer.c...
+compiling Timer.c...
+compiling Interrupt.c...
+compiling LED.c...
+linking...
+.\microwave.axf: Error: L6218E: Undefined symbol LCD_String (referred from microwave.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 1 error messages.
+".\microwave.axf" - 1 Error(s), 5 Warning(s).
+Target not created
